@@ -1,6 +1,4 @@
 DIST AMD-APP-SDK-linux-v2.9-1.599.381-GA-x64.tar.bz2 126276109 SHA256 05337de10a4731a4f6b602849e8f0d2d0eec7bdd3637e94a8ea04aa332d26036 SHA512 41267cc5f020c6ddb6e60e6ed7141584aba4728c7f471d1b1244747fadfa175c811f7a0a273d95ddc07ac1b4fde8b64ad514a5eeee771e375b2d68f86eefcb50 WHIRLPOOL 172f3c9081569cbf5781a460b3a4ffcd9a2851cc0f47554fc9a1da5dcfd970fb774de46e8846c08331a166cac56687f13a661c2b74912e092b36d3b1d8829bc5
 DIST AMD-APP-SDK-linux-v2.9-1.599.381-GA-x86.tar.bz2 100512787 SHA256 a66bd935dfe871ecb0e940a4b5bc3bde310fca59a61bf9669f6b580d845c2db5 SHA512 59b3a12b51b22437fe0e743e7e0429455853f11c2a1b65fc91a63d6250dce1230460702287b1dc16a4672114d097a9e002ec93ed8c5063be2b070c242299aa5e WHIRLPOOL 56442f1a6bf03757b3a637f69c4083391540d523a74091318686da9ac8e342ff876285ce05ed3b6d21ce6e50072cdd6f0c239bee3550adafaff0cf2ae2065c6f
-DIST AMD-APP-SDK-v2.9-lnx32.tgz 100284370 SHA256 86c0ebfd6a9037385d83d43237d986614f05ba035f50fd8d45e27c0d3c465646 SHA512 c0490223e5d8880bedf076fc6d7518507d59827caa29507cb0962b3ca4670f2a3a1d083019600ce838385d3116574887739f505cfdc01f5077a00ae584854bd0 WHIRLPOOL e6655eeeb47588d999585249f335571e427528d1a25878d6f16e47d37e1b30db5e1a1e13603f934ee20d76e5a3d16445c348169c3b6b6cbb81e5dfd543a43674
-DIST AMD-APP-SDK-v2.9-lnx64.tgz 149825628 SHA256 6287d3d0700e563f2086188b1b2143a0e988a12c1dc22709b9a23d28b8ae83bb SHA512 b00d92b9e2ead559aa66120697a1dc15ecbc1c880eed99c2a7ed030f6cccce7434245a94aa6149e2ce2dc287cb9443700d7dbc8b3756c7420c0f54cc008065bb WHIRLPOOL b839c042a73251c0b774d1c2f6b968c166f4b74b4828a4f12709220e2c79783833979140127ec98a19b0883d7bf49d031088aeaeeb150855907f18378d5de0a9
 DIST AMD-APP-SDKInstaller-v3.0.130.135-GA-linux32.tar.bz2 175232929 SHA256 8e1ad82b4cd2fcf58649daf4e43574d9d5c654cd2e07fcbb4bae7cc6d2f3daf6 SHA512 8f62ec26bf6655e71948418113553f39bfcff8588a857cb8706c2538c4742ab0e95d3843e1084acd7a8d0e8b26593a140677316b8aa285aca454828e545402a6 WHIRLPOOL 54001052fa9e8903a21916ec6265c5882d7e0d69180d2041ddde6d9ce9412a4188f7bf39d67f51792505b9a4e75b9dada2c78fcdc5e3ecadf522a8b5bda68091
 DIST AMD-APP-SDKInstaller-v3.0.130.135-GA-linux64.tar.bz2 175434609 SHA256 27a6145a73910d2320fd017159cf72f16601c375c2b304644c31566f45cc26a6 SHA512 c73ea4b4fa3f383e63755233d78203f1f5d387de1202875b40ed8e9a8b1e5a3bd6e9731244aac1086cdc1a764974ff95daca34261295a2746ddd478d0774460b WHIRLPOOL a11c878347e713b57343a7734acac505055154678cfb453cd1da84279f3e4100685d89151fb3be8ff16155f6459fa05fa9b12b5a634e28b86945023505fac810
