@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  07 Dec 2015; Marius Brehler <marbre@linux.sungazer.de> -amdapp-2.9.ebuild:
+  dev-util/amdapp: Drop old
+
 *amdapp-3.0 (27 Nov 2015)
 
   27 Nov 2015; Marius Brehler <marbre@linux.sungazer.de> +amdapp-3.0.ebuild,
